updating slider elements to also have a text value associated with it

--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,30 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Pegasus</title>
+    <style>
+      #gyro_sync_denom,
+      #pid_process_denom {
+        display: inline !important;
+      }
+      .p_roll, 
+      .i_roll, 
+      .d_roll, 
+      .p_pitch,
+      .i_pitch,
+      .d_pitch,
+      .p_yaw,
+      .i_yaw,
+      .d_yaw {
+        display: inline-block !important;
+        height: 80px;
+        width: 80px;
+        margin-top: -35px;
+        margin-bottom: 20px;
+      }
+      #p_pitch {
+        margin-left: 40px;
+      }
+    </style>
   </head>
   <body>
     <noscript>
