--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,7 @@
       }
     </style>
   </head>
-  <body>
+  <body style="font-family:Roboto, sans-serif;">
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
