applying dark theme instead

--- a/public/index.html
+++ b/public/index.html
@@ -21,9 +21,11 @@
     -->
     <title>Pegasus</title>
     <style>
-      #gyro_sync_denom,
-      #pid_process_denom {
-        display: inline !important;
+      body, html {
+        font-family:Roboto, sans-serif; 
+        margin: 0; 
+        height: 100%;
+        width: 100%;
       }
       .p_roll, 
       .i_roll, 
@@ -45,11 +47,11 @@
       }
     </style>
   </head>
-  <body style="font-family:Roboto, sans-serif;">
+  <body>
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
-    <div id="root"></div>
+    <div id="root" style="height: 100%; width: 100%;"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
